fixes ticker on mobile devices

--- a/src/app/contents/contents.component.scss
+++ b/src/app/contents/contents.component.scss
@@ -260,8 +260,12 @@
 			vertical-align: top;
 			width: 100%;
 			font: $paragraph;
+			@include breakpoint(0 $phone){
+				font-size: .75em;
+			}
 			.wrapper{
 				margin-top: 1em;
+				@include span (12 of 12);
 				.pin{
 					display: inline-block;
 					i:hover{
@@ -280,7 +284,6 @@
 				} // pin
 				.name{
 					color: $white;
-					height: 1em;
 					padding: 0.5em;
 					padding-left: 1em;
 					border-style: solid;
@@ -291,6 +294,9 @@
 					width: 200px;
 					background-color: $font;
 					margin-left: -5px;
+					@include breakpoint(0 $phone){
+						width: 150px;
+					}
 				}; //name
 				.namepinned{
 					background-color: $primary;
@@ -307,7 +313,6 @@
 				}; // name decrease
 				.amount{
 					text-align: right;
-					height: 1em;
 					border-radius: 10px 0px 0px 10px; 
 					display: inline-block;
 					padding: 0.5em;
@@ -317,7 +322,7 @@
 					border-width: 2px;
 					border-color: $font;
 					@include breakpoint (0 $phone){
-						width: 25%;
+						width: 20%;
 					}; // breakpoint
 				}; //amount
 				.amountpinned{
